# cross-platform-app

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  input.css  mobile.toml  settings.gradle  tailwind.config.js
app/: build.gradle
app/src/main/java/org/creativeblogger/org/: AppNavHost.kt  MainActivity.kt  Screen.kt
app/src/main/java/org/creativeblogger/org/screens/: HomeScreen.kt
app/src/main/java/org/creativeblogger/org/ui/theme/: Theme.kt  Type.kt
gradle/wrapper/: gradle-wrapper.properties
public/: tailwind.css
src/: header.rs  lib.rs  main.rs
src/routes/: home.rs  mod.rs  not_found.rs  post.rs
src/structs/: comment.rs  mod.rs  post.rs  user.rs
src/utils/: mod.rs
