[package]
name = "creative-blogger"
description = "Un blog participatif"
version = "0.1.0"
authors = ["Riccardo"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "creative-blogger-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
mobile-entry-point = "0.1.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.167", features = ["derive"] }
simple_logger = "4.2.0"